Added some more pages
Added the <head> to a separate file to be included in include_once for efficieny

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,10 @@ h1 {
     color:#FF3F00;
 }
 
+.second-title {
+    color:#FF7F11;
+}
+
 .section {
     border-style:solid;
     border-color: #BEB7A4;
