--- a/styles.css
+++ b/styles.css
@@ -35,12 +35,22 @@ h1 {
     padding: 1.5%;
 }
 
+.footer {
+    background-color: #BEB7A4;
+    color: #000000;    
+}
+
 a {
     color:#FF7F11;
+    background-color: #000000;
 }
 
 a:hover, a:active {
-    color: #FF3F00;
+    color: #FF3F00 !important;
+}
+
+li {
+    list-style: none;
 }
 
 /* 
